<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_tag"
        android:title="@string/action_add_tag"
        app:showAsAction="never"/>
    <item android:id="@+id/action_add_comment"
        android:title="@string/action_add_comment"
        app:showAsAction="never"/>
    <item android:id="@+id/action_edit_step"
        android:title="@string/action_edit_step"
        app:showAsAction="never"/>
    <item android:id="@+id/action_delete_step"
        android:title="@string/action_delete_step"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save_tag"
        android:icon="@drawable/ic_check_black_24dp"
        android:title="@string/action_save_tag"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_edit_tag"
        android:title="@string/action_edit_tag"
        android:visible="false"
        app:showAsAction="never"/>
    <item android:id="@+id/action_delete_tag"
        android:title="@string/action_delete_tag"
        android:visible="false"
        app:showAsAction="never"/>
</menu>