<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.rewyndr.rewyndr.activity.ProcedureActivity"
        tools:ignore="MergeRootFrame" >
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/pull_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">
                    <LinearLayout
                        style="@style/ContentContainer"
                        android:id="@+id/procedure_details_container">
                        <LinearLayout
                            style="@style/ContentHeader"
                            >
                            <TextView
                                style="@style/ContentHeading"
                                android:text="@string/procedure_details_heading"/>
                        </LinearLayout>
                        <LinearLayout
                            style="@style/ContentBody"
                            android:paddingBottom="0dp">
                            <LinearLayout
                                style="@style/ContentDetailContainer"
                                android:id="@+id/procedure_status_container">
                                <TextView
                                    style="@style/ContentDetailLabel"
                                    android:text="@string/procedure_status_label"/>
                                <TextView
                                    style="@style/ContentDetailValue"
                                    android:id="@+id/procedure_status"/>
                            </LinearLayout>
                            <LinearLayout
                                style="@style/ContentDetailContainer"
                                android:id="@+id/procedure_description_container"
                                android:visibility="gone">
                                <TextView
                                    style="@style/ContentDetailLabel"
                                    android:text="@string/procedure_description_label"/>
                                <TextView
                                    style="@style/ContentDetailValue"
                                    android:id="@+id/procedure_description"
                                    android:autoLink="web"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/procedure_steps_container"
                        style="@style/ContentContainer">
                        <LinearLayout
                            style="@style/ContentHeader">
                            <TextView
                                style="@style/ContentHeading"
                                android:text="@string/procedure_steps_heading"/>
                        </LinearLayout>
                        <LinearLayout
                            style="@style/ContentBody"
                            android:paddingBottom="0dp">
                            <TextView
                                style="@style/ContentDetailValue"
                                android:id="@+id/procedure_no_steps"
                                android:text="@string/procedure_no_steps"
                                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                            <TextView
                                style="@style/ContentDetailValue"
                                android:id="@+id/procedure_reorder_instructions"
                                android:text="@string/procedure_reorder_instructions"
                                android:visibility="gone"
                                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
                            <com.woxthebox.draglistview.DragListView
                                android:id="@+id/procedure_steps_list"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <Button
            style="@style/FormButton"
            android:id="@+id/start_dry_run"
            android:text="@string/operator_dry_run"/>
    </RelativeLayout>
    <include
        android:id="@+id/side_menu"
        layout="@layout/_side_menu" />
</androidx.drawerlayout.widget.DrawerLayout>