<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.rewyndr.rewyndr.activity.ProcedureFormActivity"
    tools:ignore="MergeRootFrame" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FormFieldContainer"
                android:id="@+id/procedure_name_input_container">
                <EditText
                    style="@style/FormFieldTextInput"
                    android:id="@+id/procedure_name_input"
                    android:inputType="textFilter|textCapSentences"
                    android:hint="@string/procedure_name_label"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/procedure_status_input_container"
                android:layout_below="@id/procedure_name_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FormSpinnerLabel"
                    android:text="@string/procedure_status_label" />

                <Spinner
                    style="@style/FormSpinner"
                    android:id="@+id/procedure_status_input"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/FormFieldContainer"
                android:id="@+id/procedure_description_input_container"
                android:layout_below="@id/procedure_status_input_container">
                <EditText
                    style="@style/FormFieldTextArea"
                    android:id="@+id/procedure_description_input"
                    android:hint="@string/procedure_description_label"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/FormButton"
                android:id="@+id/save_procedure_button"
                android:text="@string/action_save_procedure"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>