<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.rewyndr.rewyndr.activity.StepFormActivity"
    tools:ignore="MergeRootFrame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormFieldContainer"
                    android:id="@+id/step_name_input_container">
                    <EditText
                        style="@style/FormFieldTextInput"
                        android:inputType="textFilter|textCapSentences"
                        android:id="@+id/step_name_input"
                        android:hint="@string/step_name_label"
                        android:autofillHints="@string/step_name_label"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/step_image_input_container"
                    android:padding="2dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="@style/FormSpinnerLabel"
                        android:text="@string/step_image_label"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:textSize="12sp"/>
                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:padding="1dp"
                        android:background="@color/brandBackground">
                        <com.rewyndr.rewyndr.view.SquareImageView
                            android:id="@+id/step_image_input"
                            android:background="@color/white"
                            android:scaleType="centerCrop"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/save_image_to_gallery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_to_gallery"
                    android:enabled="false"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormFieldContainer"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:id="@+id/step_description_input_container">
                    <EditText
                        style="@style/FormFieldTextArea"
                        android:id="@+id/step_description_input"
                        android:autofillHints="@string/step_description_label"
                        android:hint="@string/step_description_label"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/step_require_image_on_pass_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_require_image_on_pass_label"
                    android:checked="false"/>
            </LinearLayout>


            <Button
                style="@style/FormButton"
                android:id="@+id/save_step_button"
                android:text="@string/action_save_step"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/saving_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#AA000000">
            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="125dp"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:text="@string/uploading_image_title"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="10dp"
                        android:indeterminate="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="0dp"
                        android:text="@string/uploading_image"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>