<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.rewyndr.rewyndr.activity.UserFormActivity"
        tools:ignore="MergeRootFrame" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/version_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/version_title"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/version_title"
                    android:layout_marginLeft="15dp"
                    android:textSize="12dp"/>

                <TextView
                    android:id="@+id/change_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/version_name"
                    android:text="@string/change_password_title"
                    android:textSize="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormFieldContainer"
                    android:id="@+id/user_password_input_container"
                    android:layout_below="@id/change_password_title">
                    <EditText
                        style="@style/FormFieldTextInput"
                        android:id="@+id/user_password_input"
                        android:inputType="textPassword"
                        android:hint="@string/password_label"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/FormFieldContainer"
                    android:id="@+id/user_password_confirmation_input_container"
                    android:layout_below="@id/user_password_input_container">
                    <EditText
                        style="@style/FormFieldTextInput"
                        android:id="@+id/user_password_confirmation_input"
                        android:inputType="textPassword"
                        android:hint="@string/password_confirmation_label"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    style="@style/FormButton"
                    android:id="@+id/save_user_button"
                    android:text="@string/action_update_password"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/side_menu"
        layout="@layout/_side_menu" />
</androidx.drawerlayout.widget.DrawerLayout>